@@ -8,6 +8,7 @@ Release history for Dist-Zilla-Plugin-Readme-Brief
  [Features]
  - Can now specify `source_file` which forces the name of a file to use instead of `main_module` ( aristotle++ #5 )
  - Can now automatically use the `.pod` file alternative for your `main_module` if you ship one. ( aristotle++ #5 )
+ - Can override which section to take brief from instead of DESCRIPTION by setting `description_label` ( #4 )
 
 0.002005 2015-03-04T15:21:15Z 03b80f3
  [Dependencies::Stats]
